<resources>
    <string name="app_name">Parts Off</string>
    <string name="placeholdertxt">Lorem ipsum dolor</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="re_enter_password_hint">Re-enter Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="logo_description">Logo</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="todo">TODO</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="email2">Email: </string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="search_hint">Search_background</string>
    <string name="Just_For_You">Just For You</string>
    <string name="just_for_you">Just For You!</string>
    <string name="item_1">NVIDIA® GeForce® GTX 1660 SUPER™ </string>
    <string name="item_2">GeForce RTX 3060 Ti GAMING</string>
    <string name="item_3">GeForce RTX™ 4080 SUPER</string>
    <string name="item_1_description">The TU116 graphics processor is an average sized chip with a die area of 284 mm² and 6,600 million.</string>
    <string name="item_2_description">cOOl GPU!</string>
    <string name="item_3_description">Built on the 5 nm process, and based on the AD103 graphics processor.</string>
    <string name="item_1_price">₱20,599.99 </string>
    <string name="item_2_price">₱30,599.99</string>
    <string name="item_3_price">₱50,599.99</string>
    <string name="cart">Cart symbol</string>
    <string name="searchdots">Search…</string>
    <string name="checkout">Checkout</string>
    <string name="_0">0</string>
    <string name="buy_now">Buy Now!</string>
    <string name="your_cart">Your Cart</string>
    <string name="Name">Name</string>
    <string name="phone">Phone</string>
    <string name="product_title">Product Title</string>
    <string name="price_placeholder">₱0.00</string>
    <string name="qty">QTY:</string>
    <string name="qty_placeholder">2</string>
    <string name="price">Price:</string>
    <string name="sample_description">Sample description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_product_display">ProductDisplay</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">PayPal</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="back">Back</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="order_summary">Order Summary: </string>
    <string name="cash_on_delivery_desc">Please prepare payment upon delivery</string>
    <string name="total">Total:</string>
    <string name="customer_details">Customer Details</string>
    <string name="log_out">Log out</string>
    <string name="placeholder_email">example@web.com</string>
    <string name="refresh">Refresh</string>
    <string name="for_you">For You!</string>
    <string name="nav_name">Example D. Example</string>
    <string name="nav_email">example@example.com</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="sign_up_here"><a href="#">Sign up here</a></string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="shipping_fee_p35">Shipping Fee: ₱35</string>
    <string name="total_qty_0">Total Qty: 0</string>
    <string name="subtotal_price_0_00">Subtotal Price: ₱0.0</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="barangay">Barangay</string>

</resources>