<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/sign_up"
        app:titleTextColor="@android:color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="100dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo2"
            android:contentDescription="@string/logo_description" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="396dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/signuptext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="email"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="password"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"

                android:padding="8dp" />

            <EditText
                android:id="@+id/reEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="new-password"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/re_enter_password_hint"
                android:inputType="textPassword"
                android:padding="8dp" />


            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up_button"
                android:textSize="18sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
