<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.UserProfile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/back_button"
                android:background="@color/primary"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_width="44dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/back"/>

            <ImageButton
                android:id="@+id/cartButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="23dp"
                android:layout_toStartOf="@+id/profileButton"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/cart"
                android:src="@drawable/cart_icon"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/cartQuantityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/cartButton"
                android:layout_alignEnd="@id/cartButton"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="-8dp"
                android:gravity="center"
                android:minWidth="20dp"
                android:minHeight="20dp"
                android:padding="4dp"
                android:text="@string/_0"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#F3E5F5" />

            <ImageButton
                android:id="@+id/profileButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="24dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/profile"
                android:src="@drawable/profile_icon"
                tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="118dp"
        android:layout_height="49dp"
        android:layout_marginBottom="40dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>